--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -26,9 +26,6 @@ body {
 .main {
     flex: 1;
     display: flex;
-    border-radius: 5px;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
     background-color: inherit;
     overflow-y: auto;
 
@@ -68,6 +65,9 @@ body {
 
     .main {       
         min-width: 695px;
+        border-radius: 5px;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
         box-shadow: @app-box-shadows;
         margin-bottom: 5px;
         margin-top: 5px;
@@ -141,6 +141,7 @@ body {
         flex-direction: column;
         margin-bottom: 2px;
         margin-top: 2px;
+        border-radius: none;
         position: relative;
 
         .content {
