--- a/src/client/style/model-tables.less
+++ b/src/client/style/model-tables.less
@@ -169,12 +169,24 @@
       padding-left: 30px;
       margin-top: 10px;
     }
+
+    &__container {
+      margin: 15px 15px 0 15px;
+    }
   }
 }
   
 @media screen and (min-width:600px) {
   .table-model {
     font-size: 16px;
+
+    &__title {
+      margin-top: 30px;
+    }
+  
+    &__container {
+      margin: 30px 30px 0 30px;
+    }
   }
 }
   
